product-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: analytics-platform
  namespace: enterprise-devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: analytics-platform

  template:
    metadata:
      labels:
        app: analytics-platform

    spec:
      containers:
        - name: analytics-platform

          image: 705557196379.dkr.ecr.us-west-1.amazonaws.com/analytics-platform:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 8081

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8081

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8081

            initialDelaySeconds: 15
            periodSeconds: 5
