product-kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: analytics-service
  namespace: enterprise-devops
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

spec:
  type: LoadBalancer

  selector:
    app: analytics-platform

  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
